[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2024"
authors = ["William John Holden <wjholden@users.noreply.github.com>"]

[dependencies]
itertools = "0.14.0"
nalgebra = "0.34.1"
ndarray = "0.16.1"
nom = { version = "8.0.0", features = ["alloc"] }
num = "0.4.3"
num-complex = "0.4.6"
regex = "1.11.1"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
debug = true
